Fix for overscrolling on safari

--- a/src/index.css
+++ b/src/index.css
@@ -17,5 +17,6 @@ body {
     rgba(2, 245, 255, 1) 100.2%
   );
 
-  overscroll-behavior: none;
+  position: fixed;
+  overflow: hidden;
 }
